# revenuecat-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  verify.yaml
docs/: USAGE.md
revenuecat_cli/: cli.py  common.py
revenuecat_cli/v1/: customers.py  entitlements.py
src/revcat/: __init__.py  cli.py  common.py
src/revcat/v1/: customers.py  entitlements.py  extensions.py
src/revenuecat_cli/: __init__.py  cli.py  common.py
src/revenuecat_cli/v1/: customers.py  entitlements.py  extensions.py
