[project]
name = "revenuecat-cli"
version = "0.1.0"
description = "Unofficial RevenueCat CLI for Python"
authors = [{ name = "Sealambda", email = "hello@sealambda.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
revenuecat-cli = "revenuecat_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
